--- a/README
+++ b/README
@@ -19,19 +19,52 @@ EKiD/
     SampleOutputs/      - Contains sample outputs for a few types of user config
     TBD                 - Roadmap items
 
-SETUP
------
+Setup - Ubuntu 16.04.3
+----------------------
+
+1. Install python, if not already installed. Ubuntu had python installed
+   by default.
+
+2. Install git:
+       sudo apt install git
+
+3. Clone this githib repository to your local machine:
+       git clone https://github.com/babuneelam/EKiD.git
+
+4. Install python-pip:
+       sudo apt install python-pip
+       pip install --upgrade pip
+
+5. Install PIL
+       sudo pip install pillow
+
+6. Install Selenium:
+       sudo pip install selenium
+
+7. Download latest geckdriver executable from
+       https://github.com/mozilla/geckodriver/releases
+   and place it a directory. say /home/babu/bin/
+
+8. Install Microsoft word fonts:
+       sudo apt-get install msttcorefonts
+       sudo apt-get install ttf-mscorefonts-installer
+       sudo fc-cache
+       fc-match Arial
+
+9. Modify FONTS_FOLDER in EKiD/ConfigControls/EnvCfg
+   to /usr/share/fonts/truetype/msttcorefonts/
+
+10. Modify GECKO_DRV_PATH in EKiD/ConfigControls/EnvCfg
+    to /home/babu/bin/geckodriver
 
 
 How to generate custom worksheets?
 ----------------------------------
-1. Go to the directory where EKiD/Sources is downloaded
-2. Modify "GECKO_DRV_PATH" in ConfigControls/EnvCfg to the geckodriver 
-   executable location in your syatem.
-3. Add the requried words to EKid/ConfigControls/WordList
-4. Run "python Worksheet.py"
-5. Now the expected qorksheets are at RunTimeInfo/output/
-6. Advanced Settings: 
+1. Go to the directory EKiD/Sources/
+2. Add the requried words to EKid/ConfigControls/WordList
+3. Run "python Worksheet.py"
+4. Now the expected qorksheets are at RunTimeInfo/output/
+5. Advanced Settings: 
    a. Change Algo types in ConfigControls/AlgoCfg as necessary.
    b. Change Algo types in ConfigControls/FontCfg as necessary.
    c. Change Algo types in ConfigControls/ImgCfg as necessary.
